--- a/CSS/1-seletores/style.css
+++ b/CSS/1-seletores/style.css
@@ -6,5 +6,5 @@ SELETORES
 - identificador [id para indentificar os elementos repetios]
 - classe [.classe] ( < ul class="navegação"> </ul> )
 - atributo [type="text"]
-blabkla
+blabklasa
 */ 
