--- a/jquery/1-webstore/style.css
+++ b/jquery/1-webstore/style.css
@@ -27,6 +27,7 @@ h1 {
     box-sizing: border-box;
     padding: 10px;
     margin: 0 auto;
+    overflow-x: hidden;
 }
 
 li {
@@ -60,6 +61,7 @@ h3 {
     float: left;
     border: 1px solid #F7F6F7;
     padding: 15px;
+    max-width: 100%;
 }
 
 .novidades {
@@ -67,15 +69,19 @@ h3 {
     background-color: #3C8BCE;
     text-align: center;
     padding-top: 60px;
+    box-sizing:border-box;
 }
 
 .novidades p {
+    box-sizing:border-box;
     margin-top: 20px;
 }
 
 .row {
+    box-sizing:border-box;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .form-control {
@@ -83,6 +89,7 @@ h3 {
 }
 
 .col-md-4 .btn {
+    box-sizing:border-box;
     margin-right: 80px;
     background-color: #F8FDFF;
     color: #7F91B1;
@@ -98,7 +105,6 @@ h3 {
     }
 }
 
-@media (min-width: 888px) {
     .caixa {
         background-image: url('img/loja.jpg');
         width: 100%;
@@ -118,4 +124,4 @@ h3 {
         margin-left: 100px;
         padding: 15px;
     }
-}
+
