--- a/7-SASS/style.scss
+++ b/7-SASS/style.scss
@@ -7,5 +7,20 @@ h2 {
     color: $cor-2;
 }
 
-
 @import 'box';
+
+@mixin theme($theme: Darkgray) {
+    background-color: $theme;
+    box-shadow: 0 0 1px rgba($theme, .25);
+    color: #fff
+}
+
+.box-2 {
+    @include theme 
+}
+
+.box-3 {
+    @include theme($theme: blue)
+}
+
+
